Bug 326508 - editing brush settings don't work after selecting a preset (except opacity)
Summary: editing brush settings don't work after selecting a preset (except opacity)
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Brush engines (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: unspecified Linux
: NOR major
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
: 326551 326915 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-10-23 13:30 UTC by animtim
Modified: 2014-02-26 12:24 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description animtim 2013-10-23 13:30:06 UTC
Select a preset.
Try to change the size using any method.
The size slider and the brush outline reflect the new size, but the brush keeps painting at the same size.

Note: it doesn't happen at launch with default preset, only after selecting a preset.

Reproducible: Always
Comment 1 animtim 2013-10-24 22:27:24 UTC
Ouch, actually it affects not only Size but EVERY brush parameter, except opacity.

So it's very much like the bug we've had very recently, just after the commit adding "syncro" on all preset selector to show current selected preset. It had been so quickly fixed back then (I can't even find a a bugreport about it..), but seems to have resurected with the last big merges.
Comment 2 yustas 2013-10-30 09:29:55 UTC
Hello Animtim,

I have just resolved this problem! Simply overwrite preset in the edit brush settings and select the brush preset in the brush docker again.
Comment 3 animtim 2013-10-30 10:20:56 UTC
Hi,
Well I wouldn't call it resolved.. Having to overwrite a preset and select it again before to can edit it is a big problem (and I just tested, after selecting a different preset then back to the overwritten one, I still can't edit it afterward..).

Still thanks for this workaround info, it can be useful for now, waiting for it to be fixed.
Comment 4 Halla Rempt 2013-10-30 13:44:48 UTC
*** Bug 326551 has been marked as a duplicate of this bug. ***
Comment 5 Halla Rempt 2013-10-31 12:57:40 UTC
*** Bug 326915 has been marked as a duplicate of this bug. ***
Comment 6 Halla Rempt 2013-10-31 14:19:19 UTC
Git commit 59d64a86b747d1b76dc4c3fd282f62cf5863b3c2 by Boudewijn Rempt.
Committed on 31/10/2013 at 14:18.
Pushed by rempt into branch 'master'.

Block the resourcemanager's signals when receiving a resource change

M  +2    -1    krita/ui/kis_paintop_box.cc

http://commits.kde.org/calligra/59d64a86b747d1b76dc4c3fd282f62cf5863b3c2
Comment 7 yustas 2013-11-07 07:06:54 UTC
It looks like the bug fixed. Thanks a lot!
Comment 8 Dmitry Kazakov 2014-02-26 12:24:02 UTC
Git commit 01d300c66133b4650ffcbf0eed135f6583defd62 by Dmitry Kazakov.
Committed on 26/02/2014 at 12:23.
Pushed by dkazakov into branch 'master'.

Fix the outline when the mirroring of the canvas has changed

The settings of the preset related to the canvas mirroring
and rotation should be changed not with the first click, but
dynamically on 1) preset change and 2) transformation change.
Related: bug 331487

The patch removes the fix for the following bug, although it is not
reproducible anymore.

M  +1    -0    krita/ui/CMakeLists.txt
M  +10   -1    krita/ui/canvas/kis_canvas_controller.cpp
A  +59   -0    krita/ui/canvas/kis_paintop_transformation_connector.cpp     [License: GPL (v2+)]
A  +43   -0    krita/ui/canvas/kis_paintop_transformation_connector.h     [License: GPL (v2+)]
M  +0    -2    krita/ui/kis_paintop_box.cc
M  +0    -4    krita/ui/tool/kis_tool_freehand.cc

http://commits.kde.org/calligra/01d300c66133b4650ffcbf0eed135f6583defd62