Block the resourcemanager's signals when receiving a resource change

BUG:326508